# DistillKit

./: .gitignore  LICENSE  README.md  dataset_with_teacher_logits.py  distil_hidden.py  distil_logits.py  distil_qwen2_notebook.ipynb  pyproject.toml  requirements.txt  setup.sh
distillkit/: configuration.py  cuda_ipc_utils.py  main.py  missing_probability.py  sample_common.py  sample_logits_vllm.py  trainer.py  vllm_server.py  vllm_signal_source.py
distillkit/compression/: __init__.py  config.py  densify.py
distillkit/lossfuncs/: __init__.py  common.py  kl.py
distillkit/signals/: __init__.py  base.py  offline.py  online.py  vllm.py
docs/: vllm_server.md
examples/: vllm_teacher.yml  vllm_teacher_example.yml
tests/: test_cuda_ipc.py  test_imports.py
